Local Editor Settings popup label alignment is bad (Firefox only) org-ids/web-ide-issues#914

--- a/bundles/org.eclipse.orion.client.ui/web/css/controls.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/controls.css
@@ -1117,6 +1117,10 @@ html[dir="rtl"] .uploadChooser{ /* ACGC */
 	display: table-row;
 }
 
+.local .setting-content > div > label {
+	display: table-row;
+}
+
 .local .setting-header {
 	font-weight: bold;
 	margin: 4px;
